syntax ="proto3";
package msg;

import "money.proto";
import "item.proto";

///登陆请求
//@msg
message C2S_Login{
    ///微信登陆时是微信uid,游客登陆时是手机唯一标识
    string UID=1;
    ///用户昵称
    string NickName = 2;
    ///用户头像url
    string AvatarURL = 3;
    ///性别
    string sex = 4;
    //微信登陆传openid，游客登陆传空
    string password=5;
    ///地理位置
    string location = 6;
    ///登陆类型
    enum E_LoginType {
        //微信登陆
        E_LoginType_WeChat=0;
        //游客登陆
        E_LoginType_Guest=1;
    }
    E_LoginType logintype = 7;
}

///登陆回复
//@msg
message S2C_Login{
    enum E_ErrReason {
        ///保留
        E_ErrReason_ = 0;
        ///成功登陆,将下发数据
        E_Err_LoginSuccess = 1;
        ///成功创建新账号,读表获取初始数据
        E_Err_NewAccount = 2;
        ///登陆信息不匹配,登陆失败
        E_Err_LoginInfoNotMatch = 3;
        ///验证通过,允许登陆,但登陆地点异常警告
        E_Err_LocationWarn = 4;
        ///用户不存在
        E_Err_UserNotExist = 5;
        ///已登陆
        E_Err_AlreadyLogin = 6;
        ///其它错误
        E_Err_Unknown = 7;
    }
    E_ErrReason reason=1;
}

///登陆成功后下发信息
//@msg
message S2C_LoginInfo{
    ///玩家id
    int64 ID = 1;
    ///用户昵称
    string NickName = 2;
    ///头像url
    string AvatarURL = 3;
    ///货币信息
    repeated Money Monies = 4;
    ///今日是否已签到
    bool DaySigned = 5;
    ///已签到天数
    int32 SignedDays = 6;
    ///每日签到奖励,数组第几个代表第几天
    repeated Item SignRewards = 7;
}

///每日签到请求
//@msg
message C2S_DaySign{
    ///要签到的天数
    int32 day = 1;
}

///每日签到回复
//@msg
message S2C_DaySign{
    enum E_Err_DaySign {
        ///保留
        E_ErrReason_ = 0;
        ///成功签到
        E_Err_Success = 1;
        ///今日已签到
        E_Err_AlreadySign = 2;
        ///其它错误
        E_Err_Unknown = 6;
    }
    E_Err_DaySign err = 1;
    ///签到后的货币信息
    repeated Money Monies = 2;
}
