syntax="proto3";

package msg;

message Achievement{
    ///在成就表中的id
    int64 Id = 1;
    ///成就表中的类型
    int32 Type = 2;
}

///获取已完成的成就
message C2S_GetCompletedAchievements {
}

message S2C_GetCompletedAchievements {
    repeated Achievement Achievements = 1;
}
