syntax="proto3";

package msg;

message Mail {
    ///邮件编号
    int64 Id = 1;
    ///奖励类型,对应item表id
    int64 RewardType = 2;
    ///奖励数量
    int64 RewardNum = 3;
    ///邮件内容
    string Content = 4;
}

///获取未领取奖励的邮件列表
message C2S_GetMailList {
}

message S2C_GetMailList {
    ///大佬读不了int64数组,改成string数组
    repeated Mail Mails = 1;
}

///领取mail中的奖励
message C2S_GetMailReward {
    ///要领取奖励的邮件Id
    int64 Id = 1;
}

message S2C_GetMailReward {
    int64 Id = 2;
    enum E_Err{
        E_Err_ = 0;
        ///成功
        E_Err_Succeed = 1;
        ///失败,已经领取过
        E_Err_Already_Receive = 2;
        ///失败,其它
        E_Err_UnKnown = 3;
    }
    E_Err Err = 1;
}

///一键领取
message C2S_GetAllMailReward {
}

message S2C_GetAllMailReward {
    ///领取成功的id
    repeated string Ids = 1;
}
