syntax="proto3";

package msg;

///牌
message Card{
    ///花色,1-黑桃(Spade),2-红桃(Heart),3-方块(Diamond),4-梅花(Club)
    int32 Color = 1;
    ///牌值,2-14
    int32 Num = 2;
}

///当前最大牌型
message BestCombo{
    repeated Card Cards = 1;
    ///10-皇家同花顺,9-同花顺,8-四条(金刚),7-葫芦,6-通话
    ///5-顺子,4-三条,3-两队,2-对子,1-高牌
    int32 Type = 2;
}

/// 玩家
message Player{
    ///用户Id
    int64 UserId = 1;
    ///玩家名
    string NickName = 2;
    ///头像
    string AvatarURL = 3;
    ///在房间的位置
    uint32 Pos = 4;
    ///角色,0=普通玩家, 1=庄家，2=小盲, 3=大盲
    int32 Role = 5;
    /// 筹码
    int64 Chip = 6;
    ///已押注筹码
    int64 BetChip = 7;
    ///牌
    repeated Card Cards= 8;
    ///性别
    string Sex = 9;
    ///最大牌型
    BestCombo BestCombo = 10;
    ///玩家状态,1-对局中,2-弃牌,3-无筹码
    int32 Status = 11;
}


/// 房间
message Room {
    ///房间号
    uint64 Id = 1;
    ///房间名
    string Name = 2;
    ///房间玩家
    repeated Player Players = 3;
    ///房间奖池内的筹码
    int64 Chip = 4;
    ///当前最大加注
    int64 MaxBet = 5;
    ///房间类型
    int32 RoomType = 6;
}

/// 快速开始游戏请求
message C2S_QuickMatchStart {
    ///房间类型,room表里的id
    int64 Type = 1;
}

/// 快速开始游戏回复
message S2C_QuickMatchStart {
    enum E_Err_QuickMatchStart{
        E_Err_ = 0;
        ///成功
        E_Err_Success = 1;
        ///分配房间失败
        E_Err_Room = 2;
        ///其它错误
        E_Err_UnKnown = 3;
        ///钱不够
        E_Err_NotEnoughMoney = 4;
        ///已经在游戏中
        E_Err_AlreadyInGame = 5;
    }
    E_Err_QuickMatchStart Err = 1;
    Room Room = 2;
}

/// 玩家离开房间请求
message C2S_PlayerLeaveRoom {
}

/// 玩家离开房间回复
message S2C_PlayerLeaveRoom {
    enum E_Err_PlayerLeaveRoom{
        E_Err_ = 0;
        ///成功
        E_Err_Success = 1;
        ///失败,对局中
        E_Err_Playing = 2;
        ///失败,其它
        E_Err_UnKnown = 3;
    }
    E_Err_PlayerLeaveRoom Err = 1;
}

/// 玩家加入房间
message S2C_UpdatePlayerJoinRoom {
    repeated Player Players = 1;
}

/// 玩家离开房间
message S2C_UpdatePlayerLeaveRoom {
    ///离开的玩家的用户id
    int64 UserId = 1;
    ///离开原因
    enum E_Err{
        E_Err_ = 0;
        ///正常离开
        E_Err_Normal = 1;
        ///钱不够被踢
        E_Err_Kick_NoMoney = 2;
        ///失败,其它
        E_Err_UnKnown = 3;
        ///掉线
        E_Err_DisConn = 4;
        ///赛事场结束
        E_Err_Match_Over = 5;
    }
    E_Err Reason = 4;
}

/// 开局
message S2C_GameStart{
    ///庄家位置
    uint32 Pos = 1;
    ///牌
    repeated Card Cards = 2;
    ///初始小盲注
    int64 SmallBlind = 3;
    ///最大牌型
    BestCombo Best = 4;
    ///本次赛事场第几局
    int32 Round = 5;
}

///当前轮到谁操作
message S2C_Turn {
    ///位置
    uint32 Pos = 1;
    ///是否有自动操作,0-否,1-是
    int32 Auto = 2;
}

///玩家操作
message C2S_TurnAction {
    ///操作,1-让牌,2-弃牌,3-跟注,4-加注,5-Allin
    int32 Act = 1;
    ///加注值
    int64 Bet = 2;
}

///玩家操作回复,实际操作
message S2C_TurnAction{
    ///1-让牌,2-弃牌,3-跟注,4-加注,5-Allin
    int32 Act = 1;
    ///实际下注值
    int64 Bet = 2;
    ///玩家位置
    int32 pos = 3;
}

///发公共牌
message S2C_PublicCard{
    ///公共牌
    repeated Card Cards = 1;
    ///最大牌型
    BestCombo Best = 3;
}

///勾选自动操作
message C2S_AutoAction{
    ///0-无勾选,1-让牌,2-弃牌,3-跟注,4-跟任何注
    int32 Act = 1;
}

///游戏结束
message S2C_GameOver {

}

///结算
message Balance {
    ///用户Id
    int64 UserId = 1;
    ///最大牌型
    BestCombo BestCombo = 2;
    ///输赢的筹码,负数为输
    int64 Gain = 3;
    ///退回多余的筹码
    int64 Refund = 4;
    ///手牌
    repeated Card Cards = 5;
    ///本次赛事场胜场
    int32 WinRound = 6;
}

///下发结算消息
message S2C_Balance{
    ///所有人的结算信息
    repeated Balance Balances = 1;
}

///聊天请求
message C2S_RoomChat{
    ///用户id
    int64 SrcUserId = 1;
    ///目标用户id
    int64 DstUserId = 2;
    ///内容
    string Content = 3;
}

///聊天回复
message S2C_RoomChat{
    ///用户id
    int64 SrcUserId = 1;
    ///目标用户id
    int64 DstUserId = 2;
    ///内容
    string Content = 3;
}

/// 同步游戏状态
message C2S_SyncGameStatus {
}

message S2C_SyncGameStatus {
    ///对局阶段,0-等待对局,1-4第1到4阶段,5-结算,6-不在房间(推送S2C_UpdateMoney)
    int32 GameStage = 1;
    ///公共牌
    repeated Card CommunityCards = 2;
    ///房间信息
    Room Room = 3;
    ///结算信息
    repeated Balance Balances = 4;
    ///初始小盲注
    int64 SmallBlind = 7;
    ///赛事场胜场
    int32 WinRound = 12;
    ///本次赛事场第几局
    int32 Round = 13;
}